--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,8 @@ html {
     margin-top: 15px;
     border: none;
     text-align: center;
+    appearance: none;
+    -webkit-appearance: none;
 }
 
 .btn:hover {
